Melhoria no codigo em geral e adição da função de editar

--- a/src/views/pages/perfil.ejs
+++ b/src/views/pages/perfil.ejs
@@ -12,6 +12,8 @@
         <strong><p><%= e.titulo %></p></strong>
         <p><%= e.mensagem %></p>
         <p>Publicado por: <%= e.usuario.nome %></p>
+        <a href="/excluir/<%= e.id %>">Excluir</a>
+        <a href="/editar/<%= e.id %>">Editar</a>
     <% }) %>
 </body>
 </html>
